Portal을 사용하여 태그 다른 곳으로 이동

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <body>
 
     <div id="root"></div>
+    <div id="backdrop-root"></div>
+    <div id="overlay-root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
