--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,11 +7,20 @@
     <title>Vite + React</title>
 
     <!-- reset css -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"> -->
+  
+  
   </head>
   <body>
+    <div id="modal"></div>
+    <div id="content">
+      <header>
+        <h1>The <em>Almost</em> Final Countdown</h1>
+        <p>Stop the timer once you estimate that time is (almost) up</p>
+      </header>
+      <div id="root"></div>
+    </div>
 
-    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
